--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,3 @@
-<button class="addTemperature"> + Agregar temperatura optima</button>
 <div>
     <table class="table table-borderless">
         <div class="textTemperature">
@@ -8,7 +7,7 @@
         </div>
         <div class="currentTemperature">
              <tbody>
-                <tr><th scope="row">20°C</th></tr>
+                <tr><th scope="row">{{currentTemperature}}</th></tr>
             </tbody>
         </div>
        
