--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,59 +1,49 @@
+
+.container{
+    height: 100vh;
+    background-color: #4AD592; 
+}
+
 .oscilacion{
-    position: absolute;
-    width: 296px;
-    height: 209px;
-    left: 32px;
-    top: 473px;
-
     background: #53F9A9;
-    border-radius: 10px;
+    padding: 20px;
+    border-radius: 10px; 
 }
-.textOscilacion{
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 24px;
+
+.flexway{
+    display: flex; 
+    justify-content: center; 
+    flex-direction: column; 
+    align-items: center;
+}
+
+.wh100{
+    width: 100%; 
+    height: 100%;
+}
+
+.container-button{
+    width: 100%;
+    display: flex;
+    justify-content: center; 
+}
+
+.add-temp-button{
+    border-radius: 10px; 
+    padding: 5px 20px;
+    background-color: #D9D9D9;
+}
+
+.temp-container{
+    width: 100%; 
     text-align: center;
-    color: #000000;
-}
-.rango{
-
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 36px;
-    line-height: 44px;
-    text-align: center;
-
-    color: #000000;
-}
-.currentTemperature{
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 100px;
-    line-height: 121px;
-    /* identical to box height */
-    color: #000000;
 }
 
-.textTemperature{
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 22px;
-    line-height: 27px;
-
-color: #000000;
+.title-temp{
+    font-size: 1.5rem;
 }
 
-.addTemperature{
-width: 300px;
-height: 100px;
-left: 40px;
-top: 104px;
-
-background: #D9D9D9;
-border-radius: 10px;
+.current-temp{
+    font-size: 3rem; 
+    font-weight: bold;
 }
