--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,7 +3,7 @@
    <!-- DIV TEMP -->
     <div class="flexway wh100" >
         <div class="container-button" >
-            <button class="add-temp-button">+ Agregar temperatura optima</button>
+            <button [routerLink]="['/addTemperature/']" class="add-temp-button">+ Agregar temperatura optima</button>
         </div>
         <div class="temp-container" >
             <p class="title-temp">Temperatura actual</p>
@@ -15,8 +15,8 @@
   <div class="flexway wh100">
     <div class="oscilacion">
             <p>Rango de oscilacion</p>   
-        <p>Min: <span> 18°C</span></p>
-        <p>Max: <span> 20°C</span></p>
+        <p class="temp-min-max">Min: <span> 18°C</span></p>
+        <p class="temp-min-max">Max: <span> 20°C</span></p>
     </div>
     
     </div>
