--- a/src/app/components/temperature-add/temperature-add.component.html
+++ b/src/app/components/temperature-add/temperature-add.component.html
@@ -1,7 +1,7 @@
 <div class="flexway container">
   
     <!-- DIV FORM -->
-     <div class="flexway wh100">
+     <div class="flexway div-form">
        <div class="flexway background-form">
          <span class="add-range-text">Ingresar rango</span>
          <p class="add-range-text">de temperatura</p>
