--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -16,8 +16,8 @@
       <label class="logo">Resistir</label>
       <ul>
         <li><a class="active" href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Services</a></li>
+        <li><a [routerLink]="['/addTemperature/']" href="#">+ Agregar temperatura optima</a></li>
+        <li><a href="#">Quienes somos</a></li>
         <li><a href="#">Contact</a></li>
         <li><a href="#">Feedback</a></li>
       </ul>
