Modified form of temps
Some validatios were added to the form of range of temperatures and some messages in case of bad ussing of the form.

--- a/src/app/components/temperature-add/temperature-add.component.html
+++ b/src/app/components/temperature-add/temperature-add.component.html
@@ -15,6 +15,8 @@
               <span>MAX</span><input formControlName="maxTemp" class="input-temp" type="number" /><span>°C</span>
             </div>
             
+            <p> {{tempMessage}} </p>
+
             <button [disabled]="formTemp.invalid" type="submit" class="button-save-temp">GUARDAR</button>
          </form>
   
