Fix link in navbar and the name of TemperatureAdd component path was changed

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,7 +3,7 @@
    <!-- DIV TEMP -->
     <div class="flexway wh100" >
         <div class="container-button" >
-            <button [routerLink]="['/addTemperature/']" class="add-temp-button">+ Agregar temperatura optima</button>
+            <button [routerLink]="['/add-temperature/']" class="add-temp-button">+ Agregar temperatura optima</button>
         </div>
         <div class="temp-container" >
             <p class="title-temp">Temperatura actual</p>
