--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -3,7 +3,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Responsive Navbar | CodingNepal</title>
+    <title>Responsive Navbar</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
   </head>
@@ -15,8 +15,12 @@
       </label>
       <label class="logo">Resistir</label>
       <ul>
-        <li><a class="active" href="#">Home</a></li>
-        <li><a [routerLink]="['/addTemperature/']" href="#">+ Agregar temperatura optima</a></li>
+        <li>
+          <a class="active" href="#">Home</a>
+        </li>
+        <li>
+          <a href="/add-temperature/">Agregar temperatura optima</a>
+        </li>
         <li><a href="#">Quienes somos</a></li>
         <li><a href="#">Contact</a></li>
         <li><a href="#">Feedback</a></li>
