--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -15,8 +15,8 @@
   <div class="flexway wh100">
     <div class="oscilacion">
             <p>Rango de oscilacion</p>   
-        <p class="temp-min-max">Min: <span> 18°C</span></p>
-        <p class="temp-min-max">Max: <span> 20°C</span></p>
+        <p class="temp-min-max">Min: <span>{{ rangeTemperature.minTemperature }}</span></p>
+        <p class="temp-min-max">Max: <span>{{ rangeTemperature.maxTemperature }}</span></p>
     </div>
     
     </div>
