--- a/src/app/components/temperature-add/temperature-add.component.html
+++ b/src/app/components/temperature-add/temperature-add.component.html
@@ -34,8 +34,8 @@
    <div class="flexway rango">
      <div class="container-rango" >
       <p>Rango actual de temperatura</p>   
-         <p class="temp-min-max">Min: <span> 18°C</span></p>
-         <span class="temp-min-max">Max: <span> 20°C</span></span>
+         <p class="temp-min-max">Min: <span>{{ rangeTemperature.minTemperature }}°C</span></p>
+         <span class="temp-min-max">Max: <span>{{ rangeTemperature.maxTemperature }}°C</span></span>
      </div>
      
      </div>
