--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,59 +1,59 @@
-*{
-    padding: 0;
-    margin: 0;
+* {
+  padding: 0;
+  margin: 0;
 }
 
-.container{
-    height: 80vh;
-    background-color: #4AD592; 
+.container {
+  height: 80vh;
+  background-color: #4ad592;
 }
 
-.oscilacion{
-    background: #53F9A9;
-    padding: 20px;
-    border-radius: 10px; 
-    text-align: center;
+.oscilacion {
+  background: #53f9a9;
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
 }
 
-.flexway{
-    display: flex; 
-    justify-content: center; 
-    flex-direction: column; 
-    align-items: center;
+.flexway {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
-.wh100{
-    width: 100%; 
-    height: 100%;
+.wh100 {
+  width: 100%;
+  height: 100%;
 }
 
-.container-button{
-    width: 100%;
-    display: flex;
-    justify-content: center; 
+.container-button {
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
-.add-temp-button{
-    border-radius: 10px; 
-    padding: 5px 20px;
-    background-color: #D9D9D9;
+.add-temp-button {
+  border-radius: 10px;
+  padding: 5px 20px;
+  background-color: #d9d9d9;
 }
 
-.temp-container{
-    width: 100%; 
-    text-align: center;
+.temp-container {
+  width: 100%;
+  text-align: center;
 }
 
-.title-temp{
-    font-size: 1.5rem;
+.title-temp {
+  font-size: 1.5rem;
 }
 
-.current-temp{
-    font-size: 3rem; 
-    font-weight: bold;
+.current-temp {
+  font-size: 3rem;
+  font-weight: bold;
 }
 
-.temp-min-max{
-    font-weight: bold;
-    font-size: x-large;
+.temp-min-max {
+  font-weight: bold;
+  font-size: x-large;
 }
