--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,25 +1,31 @@
-<div class="container flexway"> 
+<div class="container flexway">
+  <!-- DIV TEMP -->
+  <div class="flexway wh100">
+    <div class="container-button">
+      <button [routerLink]="['/add-temperature/']" class="add-temp-button">
+        Agregar temperatura optima
+      </button>
+    </div>
+    <div class="temp-container">
+      <p class="title-temp">Temperatura actual</p>
+      <p class="current-temp">
+        <span>{{
+          currentTemperature ? currentTemperature + "°C" : "Esperando temperatura..."
+        }}</span>
+      </p>
+    </div>
+  </div>
 
-   <!-- DIV TEMP -->
-    <div class="flexway wh100" >
-        <div class="container-button" >
-            <button [routerLink]="['/add-temperature/']" class="add-temp-button">+ Agregar temperatura optima</button>
-        </div>
-        <div class="temp-container" >
-            <p class="title-temp">Temperatura actual</p>
-            <p class="current-temp"><span>{{ currentTemperature ? currentTemperature + '°C' : 'Esperando temperatura...' }}</span></p>
-        </div>
-   </div>
-
-   <!-- DIV RANGO -->
+  <!-- DIV RANGO -->
   <div class="flexway wh100">
     <div class="oscilacion">
-            <p>Rango de oscilacion</p>   
-        <p class="temp-min-max">Min: <span>{{ rangeTemperature.minTemperature }}°C</span></p>
-        <p class="temp-min-max">Max: <span>{{ rangeTemperature.maxTemperature }}°C</span></p>
+      <p>Rango de oscilacion</p>
+      <p class="temp-min-max">
+        Min: <span>{{ rangeTemperature.minTemperature }}°C</span>
+      </p>
+      <p class="temp-min-max">
+        Max: <span>{{ rangeTemperature.maxTemperature }}°C</span>
+      </p>
     </div>
-    
-    </div>
-
+  </div>
 </div>
-
